# ark

./: Cargo.toml  LICENSE  README.md  architecture.example.pkl  test-large-project.ps1
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-15-improvements.md  2026-05-16-scaffold-init.md
docs/superpowers/specs/: 2026-05-15-improvements-design.md  2026-05-16-scaffold-design.md
pkl/: ark.pkl
src/: baseline.rs  main.rs  rules.rs
src/commands/: baseline.rs  check.rs  explain.rs  graph.rs  init.rs  mod.rs
src/commands/init/: generator.rs  mod.rs  scan.rs  wizard.rs
src/config/: loader.rs  mod.rs  model.rs
src/graph/: mod.rs
src/parser/: csproj.rs  discovery.rs  mod.rs
src/report/: mod.rs
src/scanner/: cs_scanner.rs  mod.rs
