[package]
name = "ark-cli"
version = "0.1.0"
edition = "2024"
description = "Architectural boundary enforcer for .NET solutions"
license = "MIT"

[[bin]]
name = "ark"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "color"] }

# File system traversal (respects .gitignore)
ignore = "0.4"

# XML parsing for .csproj/.sln
quick-xml = { version = "0.36", features = ["serialize"] }

# Graph engine
petgraph = "0.6"

# Error reporting
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Parallelism
rayon = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Glob pattern matching for layer resolution
glob = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime (for pkl-rust)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Pkl configuration language
pklrust = "0.9"
pklrust-derive = "0.9"

# Source scanner — C# AST
tree-sitter = "0.26"
tree-sitter-c-sharp = "0.23"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
