[package]
name = "ark-cli"
version = "0.1.2"
edition = "2024"
description = "Architectural boundary enforcer for .NET solutions"
license = "MIT"
repository = "https://github.com/TheEskhaton/ark"
homepage = "https://github.com/TheEskhaton/ark"
documentation = "https://github.com/TheEskhaton/ark#readme"
readme = "README.md"
keywords = ["architecture", "dotnet", "linter", "csharp", "dependencies"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ark"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "color"] }

# Interactive wizard prompts
dialoguer = "0.11"

# File system traversal (respects .gitignore)
ignore = "0.4"

# XML parsing for .csproj/.sln
quick-xml = { version = "0.36", features = ["serialize"] }

# Graph engine
petgraph = "0.6"

# Error reporting
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Parallelism
rayon = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Glob pattern matching for layer resolution
glob = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TOML configuration parsing
toml = "0.8"

# Source scanner — C# AST
tree-sitter = "0.26"
tree-sitter-c-sharp = "0.23"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
